# Boxing-AI

./: Boxer.cc  Boxer.h  BoxerAI.code-workspace  BoxerAI.uproject  Boxing AI_220529.docx  CMakeLists.txt  Circle.h  Point2D.h  Rectangle.cc  Rectangle.h  Shape.h  main.cc
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: StairOfPainScene.umap
Content/Blueprints/: BP_Boxer.uasset  BP_GameLogic.uasset  BP_Ring.uasset
Content/Maps/: StairOfPainScene.umap
Content/Materials/: Blue.uasset  Red.uasset
Source/: BoxerAI.Target.cs  BoxerAIEditor.Target.cs
Source/BoxerAI/: Boxer.cpp  Boxer.h  BoxerAI.Build.cs  BoxerAI.cpp  BoxerAIGameModeBase.cpp  BoxerAIGameModeBase.h  GameLogic.cpp  GameLogic.h
